--- a/.github/workflows/npm-publishing.yml
+++ b/.github/workflows/npm-publishing.yml
@@ -48,7 +48,7 @@ jobs:
           registry-url: https://registry.npmjs.org
         
       - name: Get package version
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
+        run: echo "RELEASE_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
           
       - name: Set up package version
         run: npm --no-git-tag-version --allow-same-version version $RELEASE_VERSION
